--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -66,7 +66,7 @@
 .cardd
 {
 
-    margin-top: 170px !important;
+    margin-top: 0px !important;
 }
 .dashboard
 {
@@ -361,7 +361,7 @@
 }
 .sidebar {
     overflow: auto;
-    max-height: 527px;
+    max-height: 520px;
 }
 .font-hover:hover
 {
@@ -717,8 +717,8 @@ font-weight: bold;
       
   }
   .send-btn:hover{
-      background-color:#57c08c  ;
-    box-shadow: 4px 4px 5px black !important;
+      background-color:#3490dc   ;
+    box-shadow: 4px 4px 5px #3798A5  !important;
 
   }
   .btn-group .btn.btn-secondary.active {
@@ -763,3 +763,58 @@ font-weight: bold;
     text-align:center !important;
     font-size: 50px;
 }
+.start-chat
+{
+    height: 50px !important;
+    font-size: 15px !important;
+}
+.publish
+{
+    width: 100px;
+    height: 50px;
+    line-height: 25px;
+    background-color: #3490dc;
+    color: white;
+}
+
+.checke {
+    color: #f5bd23;
+  }
+
+ .auto-size
+ {
+     font-size: 31px !important;
+ } 
+ .user-cls
+ {
+     font-size: 35px;
+     color: #3490dc;
+ }
+ .foter
+ {
+     background-color:#3490dc ;
+     height: 60px;
+     line-height: 60px;
+     position: relative;
+     bottom: 0;
+     width: 100%;
+ }
+ .end-call
+ {
+   border-radius: 30px !important;
+   position: absolute;
+   bottom:100;
+   left: 50%;
+  
+ }
+ .t
+ {
+
+     margin-top: 20px;
+     background-color:  #3490dc !important;
+     box-shadow: -4px -4px -5px #3490dc !important;
+     height: 10px;
+ }
+ 
+
+
